--- a/src/scss/layout/_productos.scss
+++ b/src/scss/layout/_productos.scss
@@ -5,7 +5,7 @@ main {
   box-sizing: border-box;
   padding-bottom: 0 !important; // Sin padding inferior
   margin-bottom: 0 !important; // Sin margin inferior
-  margin: auto;
+  margin: 3rem auto;
   justify-content: center;
   @media (max-width: 768px) {
     padding: 1rem;
@@ -13,7 +13,7 @@ main {
   }
 
   @media (min-width: 769px) {
-    margin: auto;
+    //margin: auto;
     padding: 1.5rem 2rem;
     //max-width: 100%;
   }
